start documenting handlers
